feat(case): add AI case generation workflow